--- a/javastone/src/main/java/com/hxr/javatone/concurrency/netty/inaction/websocket/index.html
+++ b/javastone/src/main/java/com/hxr/javatone/concurrency/netty/inaction/websocket/index.html
@@ -10,6 +10,7 @@
 		}
 		if (window.WebSocket) {
 			socket = new WebSocket("ws://localhost:2048/ws");
+			//socket = new WebSocket("wss://localhost:2048/ws");
 			socket.onmessage = function(event) {
 				var ta = document.getElementById('responseText');
 				ta.value = ta.value + '\n' + event.data
